--- a/todo
+++ b/todo
@@ -31,52 +31,8 @@ user maeder
 Florian (Till)
 ************************************************
 
-
-Applikation1  ---
-                   |      | -- Freibuger Solver
-                   XML ---      |---- Französischer Solver
-                   |      |-- Hets -- Bremer Solver
-Applikation2 -----             |
-                            ConstraintCASL
-                               |
-                   Semantische Modelle/Korrektheit (CASL, HAsCASL)
-
-XML-Einlesen in Haskell: 
-HXT (siehe OMDoc.XmlHandling): kann Namespaces
-(HaXML: kann Haskell-Datenypen in DTDs umwandeln)
-
-Outline der Diplomarbeit
-  Qualitative Constraint-Kalküle (siehe Thomas)
-  CASL (siehe Paper   T. Mossakowski: Relating CASL with Other Specification Languages:
-        the Institution Level Theoretical Computer Science 286, p. 367-475, 2002.)
-     CASL-Formeln nur ganz kurz
-  ConstraintCASL
-    Signaturen, Signaturmorphismen (aus CASL)
-    Modelle (aus CASL)
-    Formeln
-    Erfülltheit von Formeln
-    optional: Erfülltheitsbedingung
-        M |= sigma(phi)  <=>  M|_sigma |= phi
-      für Signaturmorphismus sigma:Sigma_1->Sigma_2
-      M \in Mod(Sigma_2), phi\in Sen(Sigma_1)
-  Formalisierung von Kalkülen in ConstraintCASL
-  Constraint-Solver (auch in ihren Eigenheiten)
-  Übersetzungen zwischen den verschieden Formaten
-  praktischer Vergleich
-  Anwendung
-Übersetzungen bis 30.Juni
-  ConstraintCASL -> Bremer Solver
-     CASL/ComputeTable
-  Bremer Solver -> ConstraintCASL
-     Parser (mit Parsec), der Kompositionstabelle des Bremer Solvers
-      parsiert und ConstraintCASL-Spec (abstrakte Syntax) zurückgibt
-      Das kann das als Option in Hets eingebunden werden (Christian Maeder)
-Freiburger Constraint-Solver angucken im Juli
-Übersetzungen bis 31. Juli
-  ConstraintCASL -> Freibuger Solver/XML-Format
-     CASL/ComputeTable
-     Option: comptable.xml
-  Freibuger Solver/XML-Format -> ConstraintCASL
+see http://trac.informatik.uni-bremen.de:8080/hets
+user fmossa
 
 ************************************************
 Hendrik (Till)
